--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,3 +31,7 @@ select,
 textarea {
   @apply rounded border p-2  outline-none ring-sky-600  focus:ring;
 }
+
+.dropdown-link {
+  @apply flex p-2 hover:bg-gray-200;
+}
